# label-sam

./: .gitignore  Cargo.toml  README.md  config.json
src/: app.rs  config.rs  main.rs  utils.rs
src/app/: model.rs  threads.rs  ui.rs
src/app/model/: sam.rs  yolo.rs
src/app/model/sam/: prompt.rs
src/app/threads/: image_loader.rs
src/app/ui/: instance.rs  state.rs
