[package]
name = "label-sam"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "=2.0.0-rc.8", features = ["cuda", "load-dynamic"] }
ndarray = "0.16.1"
candle-transformers = { version = "0.7.2", features = ["cuda"] }
candle-nn = { version = "0.7.2", features = ["cuda"] }
candle-core = { version = "0.7.2", features = ["cuda"] }
egui = "0.29.1"
eframe = "0.29.1"
image = "0.25.5"
lazy_static = "1.5.0"
imageproc = "0.25.0"
