[package]
name = "label-sam"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "=2.0.0-rc.8", features = ["cuda", "load-dynamic"] }
ndarray = "0.16.1"
egui = "0.29.1"
eframe = "0.29.1"
image = "0.25.5"
lazy_static = "1.5.0"
imageproc = "0.25.0"
strum_macros = "0.26.4"
strum = "0.26.3"
geo = "0.29.2"
rfd = "0.15.1"
walkdir = "2.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
